package ImageHoster.service;

import ImageHoster.model.Comment;

public interface CommentService {

	void addComment(Comment comment);

}