@startuml

title __SERVICE's Class Diagram__\n

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.CommentService {
          + addComment()
      }
    }
  }
  

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.ImageService {
          + deleteImage()
          + getAllImages()
          + getImage()
          + getImageByIdAndTitle()
          + updateImage()
          + uploadImage()
      }
    }
  }
  

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.TagService {
          + createTag()
          + getTagByName()
      }
    }
  }
  

  namespace ImageHoster {
    namespace service {
      class ImageHoster.service.UserService {
          + login()
          + registerUser()
      }
    }
  }
  

  ImageHoster.service.CommentService o-- ImageHoster.repository.CommentRepository : commentRepository
  ImageHoster.service.ImageService o-- ImageHoster.repository.ImageRepository : imageRepository
  ImageHoster.service.TagService o-- ImageHoster.repository.TagRepository : tagRepository
  ImageHoster.service.UserService o-- ImageHoster.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
